--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -347,12 +347,18 @@ body {
     @media only screen and (max-width: 37.5em) {
       .overview__rating-average {
         font-size: 1.8rem; } }
+    @media only screen and (max-width: 31.25em) {
+      .overview__rating-average {
+        margin-bottom: 1rem; } }
   .overview__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase; }
     @media only screen and (max-width: 37.5em) {
       .overview__rating-count {
         font-size: 0.5rem; } }
+    @media only screen and (max-width: 31.25em) {
+      .overview__rating-count {
+        text-align: center; } }
 
 .btn-inline {
   border: none;
